--- a/ledger-live/PKGBUILD
+++ b/ledger-live/PKGBUILD
@@ -12,7 +12,7 @@ arch=('x86_64')
 url='https://github.com/LedgerHQ/ledger-live'
 license=('MIT')
 depends=('ledger-udev')
-makedepends=('git' 'python>=3.5' 'npm' 'pnpm' 'nodejs>=16' 'node-gyp')
+makedepends=('git' 'python>=3.5' 'npm' 'pnpm' 'nodejs>=16' 'nodejs<19' 'node-gyp')
 provides=('ledger-live')
 conflicts=('ledger-live-bin' 'ledger-live-git')
 _extdir=ledger-live--ledgerhq-live-desktop-${pkgver}
