--- a/kaizen/PKGBUILD
+++ b/kaizen/PKGBUILD
@@ -31,8 +31,7 @@ build() {
 package() {
   install -Dm644 "${srcdir}/${pkgname}.desktop" "${pkgdir}/usr/share/applications/${pkgname}.desktop"
 
-  install -dm755 "${pkgdir}/opt"
-  mkdir -p "${pkgdir}/opt/${pkgname}/"
+  install -dm755 "${pkgdir}/opt/${pkgname}"
   cp -a "${srcdir}/${pkgname}.jar" "${pkgdir}/opt/${pkgname}/"
   cp -a "${srcdir}/${pkgname}.sh" "${pkgdir}/opt/${pkgname}/"
   cp -a "${srcdir}/jvm" "${pkgdir}/opt/${pkgname}/"
