--- a/check.toml
+++ b/check.toml
@@ -50,6 +50,12 @@ github = "oxen-io/oxen-electron-gui-wallet"
 use_latest_release = true
 prefix = "v"
 
+[oxen-electron-wallet-bin]
+source = "github"
+github = "oxen-io/oxen-electron-gui-wallet"
+use_latest_release = true
+prefix = "v"
+
 [prey-node-client]
 source = "github"
 github = "prey/prey-node-client"
