--- a/.github/workflows/nvchecker.yml
+++ b/.github/workflows/nvchecker.yml
@@ -24,6 +24,7 @@ jobs:
         uses: nick-fields/retry@v2
         with:
           timeout_seconds: 30
+          retry_wait_seconds: 30
           max_attempts: 3
           command: ./check.sh >> new-vers.txt
 
