--- a/check.toml
+++ b/check.toml
@@ -32,11 +32,9 @@ url = "https://app.koofr.net/dl/apps/linux64"
 header = "content-disposition"
 
 [ledger-live]
-source = "github"
-github = "LedgerHQ/ledger-live"
-use_max_tag = true
-include_regex = "@ledgerhq/live-desktop@([0-9]+\\.[0-9]+\\.[0-9]+)"
-prefix = "@ledgerhq/live-desktop@"
+source = "regex"
+url = "https://raw.githubusercontent.com/LedgerHQ/ledger-live/main/apps/ledger-live-desktop/RELEASE_NOTES.md"
+regex = "# ([0-9]+\\.[0-9]+\\.[0-9]+)"
 
 [ledger-live-bin]
 source = "httpheader"
