--- a/check.toml
+++ b/check.toml
@@ -59,3 +59,8 @@ source = "github"
 github = "prey/prey-node-client"
 use_latest_release = true
 prefix = "v"
+
+[xawtv]
+source = "git"
+git = "https://git.linuxtv.org/xawtv3.git"
+prefix = "xawtv-"
